# file-agent

./: .env.example  .gitignore  README.md  log.txt  pyproject.toml
file_agent/: agent.py  instructions.txt  sandbox.py  tools.py
